touch configuration works

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,5 @@
 idf_component_register(SRCS "my-notifications.c" "lcd_panel.c"
                     PRIV_REQUIRES esp_lcd_st7701
+                    PRIV_REQUIRES esp_lcd_touch_gt911
                     PRIV_REQUIRES esp_lcd_panel_io_additions
                     INCLUDE_DIRS ".")
