--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -16,3 +16,4 @@ dependencies:
   #   public: true
   espressif/esp_lcd_st7701: '*'
   espressif/esp_lcd_panel_io_additions: ==1.0.0
+  espressif/esp_lcd_touch_gt911: '*'
